--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<your-username>.github.io/<your-repository>",
+  "homepage": "https://Kanchan3D.github.io/Portfolio",
   "name": "kanchan-portfolio",
   "version": "0.1.0",
   "private": true,
