--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "dev": "vite",
-  "build": "vite build",
+  "build": "set \"VITE_CJS_TRACE=true\" && vite build",
   "serve": "vite preview",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d dist"
