fixed some errors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Kanchan3D.github.io/Portfolio",
+  "homepage": "https://Kanchan3D.github.io/portfolio",
   "name": "kanchan-portfolio",
   "version": "0.1.0",
   "private": true,
