--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+MONGODB_MIGRATION_COMPLETE.md
+MONGODB_SETUP.md
+ARCHITECTURE.md
+SETUP_COMPLETE.md
+QUICK_START.md
