--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    },
     {
       "src": "api/index.js",
       "use": "@vercel/node"
@@ -20,9 +17,6 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "env": {
-    "VITE_API_URL": "/api"
-  }
+  ]
 }
   
