--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.3",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.2.0",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,11 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "gh-pages": "^6.2.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.2.3"
+    "gh-pages": "^6.2.0"
   }
 }
