--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules
+frontend/node_modules
+backend-api/node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-/dist
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Environment files
 .env
+.env.local
+.env*.local
+frontend/.env.local
+backend-api/.env
+
+# Build outputs
+dist
+frontend/dist
+build
+
+# Vite cache
+.vite
+frontend/.vite
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor
+.vscode
+.idea
+*.swp
+*.swo
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-MONGODB_MIGRATION_COMPLETE.md
-MONGODB_SETUP.md
-ARCHITECTURE.md
-SETUP_COMPLETE.md
-QUICK_START.md
+
+# Old/deprecated folders
+backend/
