--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
+  "framework": null,
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
+  "installCommand": null,
   "builds": [
     {
       "src": "api/index.js",
@@ -19,4 +21,3 @@
     }
   ]
 }
-  
